# prefect-oci

./: .gitignore  README.md  pyproject.toml
examples/install-dependencies/: flow.py  prefect.yaml
examples/simple/: README.md  prefect.yaml  test.py
prefect_oci/deployments/: logging.py
prefect_oci/deployments/steps/: __init__.py  build.py  pull.py  push.py
prefect_oci/provider/: auth.py  container.py  defaults.py  image.py  oci.py  platform.py  registry.py  schemas.py
prefect_oci/utils/: archive.py
tests/deployments/steps/: test_build.py  test_pull.py  test_push.py
tests/provider/: __init__.py  test_auth.py
